[package]
name = "jsonstat"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/007gzs/crawl/"
authors = ["007gzs <007gzs@gmail.com>"]
description = "jsonpath stat"
readme = "README.md"
keywords = ["json", "jsonpath", "jsonl"]
include = ["/src", "/examples", "Cargo.toml", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"