[package]
name = "jsonstat"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/007gzs/jsonstat/"
authors = ["007gzs <007gzs@gmail.com>"]
description = "jsonpath stat"
readme = "README.md"
keywords = ["json", "jsonpath", "jsonl"]
include = ["/src", "/examples", "Cargo.toml", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde  = {version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
threadpool = "1"